fix z-index ccg component.

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -147,7 +147,7 @@
 	height: 500px;
 }
 #ccgcomponent {
-	z-index: 1;
+	z-index: 9999;
 	position: absolute;
 }
 #ccg-component {
